--- a/game.html
+++ b/game.html
@@ -10,7 +10,7 @@
 <body onload="fadeInGame()">
     <header class="header" id="head_text">
         <div id="entireHead">
-            <button id="headToTitle"><a href="title.html">Title</a></button>
+            <button id="headToTitle"><a href="index.html">Title</a></button>
             <div id="hangman">Hangman</div>
         </div>
         <div id="subtext">Use the alphabet below the guess the word</div>
