--- a/game.html
+++ b/game.html
@@ -10,17 +10,17 @@
 <body onload="fadeInGame()">
     <header class="header" id="head_text">
         <div id="entireHead">
-            <button id="headToTitle"><a href="title.html">Title</a></button>
+            <button id="headToTitle"><a href="index.html">Title</a></button>
             <div id="hangman">Hangman</div>
         </div>
-        <div id="subtext">Use the alphabet below the guess the word</div>
+        <div id="subtext">Use the alphabet below the guess the player</div>
     </header>
     <main id="letters_container">
         <div id="all_letters"></div>
     </main>
     <div id="emptySpaces">
         <div id="emptyLetter"></div>
-        <div id="stickman"></div>
+        <div id="lives">Six lives left</div>
     </div>
     <script src="index.js"></script>
 </body>
