--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
             <div id="hangman">Hangman</div>
+            <button id="reset">RESET</button>
         </div>
         <div id="subtext">Use the alphabet below the guess the player</div>
     </header>
