--- a/game.html
+++ b/game.html
@@ -21,7 +21,7 @@
     </main>
     <div id="emptySpaces">
         <div id="emptyLetter"></div>
-        <div id="lives">Six lives left</div>
+        <div id="lives">6 lives left</div>
     </div>
     <script src="index.js"></script>
 </body>
