--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body onload="fadeInTitle()">
     <main id="title_main">
-        <div class="title_text" id="first">THE WORLD'S</div>
-        <div class="title_text" id="second">MOST DIFFICULT</div>
+        <div class="title_text" id="first">THE</div>
+        <div class="title_text" id="second">FOOTBALL</div>
         <div class="title_text" id="third">HANGMAN!</div>
         <button id="play-btn"><a href="game.html">Play</a></button>
     </main>
