--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
             <div id="hangman">Hangman</div>
-            <button id="reset">RESET</button>
+            <button class='btns' id="reset-btn">Reset</button>
         </div>
         <div id="subtext">Use the alphabet below the guess the player</div>
     </header>
@@ -22,6 +22,11 @@
     <div id="emptySpaces">
         <div id="emptyLetter"></div>
         <div id="lives">6 lives left</div>
+        <div id="footer">
+            <div id="score">Score: 0</div>
+            <button class='btns' id="next-btn">next</button>
+            <div id="hiScore">Hi Score: 0</div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
