--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body onload="fadeInGame()">
+    <embed src="bg.mp3" autostart="true" loop="true">
     <header class="header" id="head_text">
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
