--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body onload="fadeInTitle()">
-    <embed src="bg.mp3" autostart="true" loop="true">
+    <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
     <main id="title_main">
         <div class="title_text" id="first">THE</div>
         <div class="title_text" id="second">FOOTBALL</div>
