--- a/game.html
+++ b/game.html
@@ -8,11 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body onload="fadeInGame()">
-    <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
     <header class="header" id="head_text">
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
-            <div id="hangman">Hangman</div>
+            <div id="hangman">
+                Hangman
+                <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
+            </div>
             <button class='btns' id="reset-btn">Reset</button>
         </div>
         <div id="subtext">Use the alphabet below the guess the player</div>
