--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
 <body onload="fadeInTitle()">
-    <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
     <main id="title_main">
-        <div class="title_text" id="first">THE</div>
+        <div class="title_text" id="first">
+            THE
+            <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
+        </div>
         <div class="title_text" id="second">FOOTBALL</div>
         <div class="title_text" id="third">HANGMAN!</div>
         <button id="play-btn"><a href="game.html">Play</a></button>
