--- a/game.html
+++ b/game.html
@@ -11,10 +11,7 @@
     <header class="header" id="head_text">
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
-            <div id="hangman">
-                Hangman
-                <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
-            </div>
+            <div id="hangman">Hangman</div>
             <button class='btns' id="reset-btn">Reset</button>
         </div>
         <div id="subtext">Use the alphabet below the guess the player</div>
@@ -29,6 +26,11 @@
             <div id="score">Score: 0</div>
             <button class='btns' id="next-btn">next</button>
             <div id="hiScore">Hi Score: 0</div>
+            <audio id="audio" autoplay="autoplay">
+                <source src="bg.mp3" type="audio/mp3">
+            </audio>
+            <img src="mute.png" onclick="document.getElementById('audio').pause()" 
+            ondblclick="document.getElementById('audio').play()"/>
         </div>
     </div>
     <script src="index.js"></script>
