--- a/game.html
+++ b/game.html
@@ -29,8 +29,7 @@
             <audio id="audio" autoplay="autoplay">
                 <source src="bg.mp3" type="audio/mp3">
             </audio>
-            <img src="mute.png" onclick="document.getElementById('audio').pause()" 
-            ondblclick="document.getElementById('audio').play()"/>
+            <img src="mute.png" id="mute"/>
         </div>
     </div>
     <script src="index.js"></script>
