--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
             <div id="hangman">Hangman</div>
             <button class='btns' id="reset-btn">Reset</button>
         </div>
-        <div id="subtext">Use the alphabet below the guess the player</div>
+        <div id="subtext">Each player guessed grants you 2 extra lives</div>
     </header>
     <main id="letters_container">
         <div id="all_letters"></div>
