--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
             <div id="score">Score: 0</div>
             <button class='btns' id="next-btn">next</button>
             <div id="hiScore">Hi Score: 0</div>
-            <audio id="audio" autoplay="autoplay">
+            <audio id="audio" autoplay="autoplay" loop="true">
                 <source src="bg.mp3" type="audio/mp3">
             </audio>
             <img src="mute.png" id="mute"/>
