--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body onload="fadeInTitle()">
     <main id="title_main">
-        <div class="title_text" id="first">
-            THE
-            <embed src="bg.mp3" autostart="true" loop="true" hidden="true">
-        </div>
+        <div class="title_text" id="first">THE</div>
         <div class="title_text" id="second">FOOTBALL</div>
         <div class="title_text" id="third">HANGMAN!</div>
         <button id="play-btn"><a href="game.html">Play</a></button>
