--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body onload="fadeInTitle()">
     <main id="title_main">
         <div class="title_text" id="first">THE</div>
-        <div class="title_text" id="second">FOOTBALL</div>
+        <div class="title_text" id="second">WORLD'S DEADLIEST</div>
         <div class="title_text" id="third">HANGMAN!</div>
         <button id="play-btn"><a href="game.html">Play</a></button>
     </main>
