--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<body onload="fadeInGame()">
+<body onload="fadeInGame()" id="body">
     <header class="header" id="head_text">
         <div id="entireHead">
             <button id="headToTitle"><a href="index.html">Title</a></button>
@@ -31,12 +31,13 @@
             <div class="time_css" id="timer">Time: 0</div>
         </div>
         <div id="footer">
+            <button id="invert">🌒</button>
             <div id="score">Score: 0</div>
             <div id="hiScore">Hi Score: 0</div>
             <audio id="audio" autoplay="autoplay" loop="true">
                 <source src="bg.mp3" type="audio/mp3">
             </audio>
-            <img src="mute.png" id="mute"/>
+            <p id="mute">🔇</p>
         </div>
     </div>
     <script src="index.js"></script>
