--- a/game.html
+++ b/game.html
@@ -37,7 +37,7 @@
             <audio id="audio" autoplay="autoplay" loop="true">
                 <source src="bg.mp3" type="audio/mp3">
             </audio>
-            <p id="mute">🔇</p>
+            <p id="mute">🔊</p>
         </div>
     </div>
     <script src="index.js"></script>
