--- a/game.html
+++ b/game.html
@@ -15,7 +15,7 @@
             <button class='btns' id="reset-btn">Reset</button>
         </div>
         <div id="subtext">
-            <div>For each word guessed: 2 extra lives & 30 seconds</div>
+            <div>For each player guessed: 2 extra lives & 30 seconds</div>
         </div>
     </header>
     <main id="letters_container">
